# aily-py

./: .gitignore  README.md  pyproject.toml  requirements.pip  setup.cfg  setup.py
aily/: __init__.py  main.py  models.py
aily/db/: main.py
aily/hardwares/: tts.py
aily/llm/: __init__.py
aily/tools/: speech_to_text.py
examples/: .env.sample  .env_sample  aily_tts.py  conversation.py  conversation_01.py  conversation_custom_zhipu.py  conversation_llm_zhipu.py  conversation_local_stt.py  conversation_openai.py  conversation_records.py  conversation_wait_words.py  custom_invoke.py  custom_invoke_vision.py  example.py  function_call.py  function_call_image.py  function_calls.py  sample.py  wait_words.py
src/agishell/: __init__.py  __version__.py  agi.py  aigc.py  connectors.py  llm.py
src/agishell/hardwares/: 130x.py  audio130x.py
src/agishell/llm/: __init__.py  llm.py
src/agishell/llms/: llm.py  openai.py
src/agishell/tools/: __init__.py  speech_to_text.py  speex_decoder.py  text_to_speech.py
src/aily/: __version__.py  aigc.py  main.py
src/aily/db/: __init__.py  crud.py  main.py
src/aily/hardwares/: __init__.py  audio.py  audio130x.py  tts.py
src/aily/llm/: llm.py  text_generation.py  vision.py
src/aily/tools/: __init__.py  speech_to_text.py  speex_decoder.py  text_to_speech.py  tools.py
supervisor/: aily.conf
tests/: test_agi.py  test_llm.py  test_speech_to_text.py  test_text_to_speech.py
