[project]
name = "agishell"
version = "1.0.0"
dependencies = [
    "python-dotenv == 1.0.1",
    "aiohttp == 3.9.3",
    "reactivex == 4.0.4",
    "loguru",
    "requests",
    "pyserial"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["tests"]
namespaces = false