[project]
name = "aily-py"
version = "2.0.1"
dependencies = [
    "python-dotenv == 1.0.1",
    "aiohttp == 3.9.3",
    "reactivex == 4.0.4",
    "tenacity == 8.2.3",
    "tiktoken == 0.6.0",
    "SpeechRecognition",
    "loguru",
    "requests",
    "pyserial",
    "openai",
    "edge-tts == 6.1.10"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["tests"]
namespaces = false